<resources>
    <string name="app_name">Places to visit</string>

    <string name="title_image1">Cosmo Caixa</string>
    <string name="title_image2">Jardí Botànic</string>
    <string name="title_image3">Jardins del Teatre Grec</string>
    <string name="title_image4">Museu Picasso</string>
    <string name="title_image5">Museu del Disseny</string>

    <string name="subtitle_image1">+INFO: 932 12 60 50</string>
    <string name="subtitle_image2">+INFO: 932 56 41 60</string>
    <string name="subtitle_image3">+INFO: 933 161 000</string>
    <string name="subtitle_image4">+INFO: 932 56 30 00</string>
    <string name="subtitle_image5">+INFO: 932 56 68 00</string>

    <string name="buttons">VISITAR</string>

    <string name="hint_1">Nom</string>
    <string name="hint_2">Cognoms</string>
    <string name="hint_3">Email</string>

    <string name="copyright">Copyright 2021 © Arnau Gràcia</string>
</resources>