<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_wave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="115dp"
            app:cardCornerRadius="30dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/cosmo_caixa" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title_visitar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card1"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/title_image1"
            android:textColor="@color/primaryDarkColor"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_visitar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            app:hintTextColor="@color/primaryDarkColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/input1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/input2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_3" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/copyright" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>